HUE-8601 [jb] Fix issue where context selector in mini jb is hidden behind expand text

--- a/desktop/core/src/desktop/static/desktop/less/hue4.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue4.less
@@ -101,6 +101,15 @@
   .hue-box-shadow-top;
 }
 
+.mini-jb-context-selector {
+  padding: 5px 80px 0 0;
+  float: right;
+
+  .hue-drop-down-active span {
+    font-size: 13px;
+  }
+}
+
 .notification-history {
   overflow-y: auto;
   max-height: 270px;
